log
Thu Apr 21 11:27:43 HSP 2022: 
 treemap.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
 tests:  2|8
total_score: 0/70
2a8093f
Thu Apr 21 11:28:36 HSP 2022: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|7
total_score: 10/70
90e7cb4
Thu Apr 21 11:40:09 HSP 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:47:16: error: unused variable 'aux' [-Werror=unused-variable]
     TreeNode * aux = tree->root;
                ^~~
cc1.exe: all warnings being treated as errors
Compilation failed
836494d
Thu Apr 21 11:40:24 HSP 2022: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|7
total_score: 10/70
9ba97b7
